parser/src/snapshots/squawk_parser__parse__tests__alter_role_set_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterRoleSetStmt(
                    Object({
                        "role": Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    12,
                                ),
                                "rolename": String(
                                    "worker_bee",
                                ),
                                "roletype": Number(
                                    0,
                                ),
                            }),
                        }),
                        "setstmt": Object({
                            "VariableSetStmt": Object({
                                "args": Array([
                                    Object({
                                        "A_Const": Object({
                                            "location": Number(
                                                50,
                                            ),
                                            "val": Object({
                                                "Integer": Object({
                                                    "ival": Number(
                                                        100000,
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                ]),
                                "kind": Number(
                                    0,
                                ),
                                "name": String(
                                    "maintenance_work_mem",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    56,
                ),
            },
        ),
    ],
)
