parser/src/snapshots/squawk_parser__parse__tests__alter_sequence_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterSeqStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                105,
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "restart",
                                    ),
                                    "location": Number(
                                        23,
                                    ),
                                }),
                            }),
                        ]),
                        "sequence": Object({
                            "RangeVar": Object({
                                "inh": Bool(
                                    true,
                                ),
                                "location": Number(
                                    16,
                                ),
                                "relname": String(
                                    "serial",
                                ),
                                "relpersistence": String(
                                    "p",
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    39,
                ),
            },
        ),
    ],
)
