parser/src/snapshots/squawk_parser__parse__tests__alter_subscription_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterSubscriptionStmt(
                    Object({
                        "kind": String(
                            "ALTER_SUBSCRIPTION_PUBLICATION",
                        ),
                        "publication": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "insert_only",
                                    ),
                                }),
                            }),
                        ]),
                        "subname": String(
                            "mysub",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    53,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: AlterSubscriptionStmt(
                    Object({
                        "kind": String(
                            "ALTER_SUBSCRIPTION_ENABLED",
                        ),
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                0,
                                            ),
                                        }),
                                    }),
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "enabled",
                                    ),
                                    "location": Number(
                                        55,
                                    ),
                                }),
                            }),
                        ]),
                        "subname": String(
                            "mysub",
                        ),
                    }),
                ),
                stmt_location: 54,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
