parser/src/snapshots/squawk_parser__parse__tests__alter_system_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterSystemStmt(
                    Object({
                        "setstmt": Object({
                            "args": Array([
                                Object({
                                    "A_Const": Object({
                                        "location": Number(
                                            30,
                                        ),
                                        "val": Object({
                                            "String": Object({
                                                "str": String(
                                                    "hot_standby",
                                                ),
                                            }),
                                        }),
                                    }),
                                }),
                            ]),
                            "kind": String(
                                "VAR_SET_VALUE",
                            ),
                            "name": String(
                                "wal_level",
                            ),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    41,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: AlterSystemStmt(
                    Object({
                        "setstmt": Object({
                            "kind": String(
                                "VAR_RESET",
                            ),
                            "name": String(
                                "wal_level",
                            ),
                        }),
                    }),
                ),
                stmt_location: 42,
                stmt_len: Some(
                    29,
                ),
            },
        ),
    ],
)
