parser/src/snapshots/squawk_parser__parse__tests__alter_table_extension.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterExtensionStmt(
                    Object({
                        "extname": String(
                            "hstore",
                        ),
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "2.0",
                                            ),
                                        }),
                                    }),
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "new_version",
                                    ),
                                    "location": Number(
                                        30,
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    38,
                ),
            },
        ),
    ],
)
