parser/src/snapshots/squawk_parser__parse__tests__alter_ts_configuration_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: AlterTSConfigurationStmt(
                Object({
                    "cfgname": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "astro_en",
                                ),
                            }),
                        }),
                    ]),
                    "dicts": Array([
                        Object({
                            "List": Object({
                                "items": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "astrosyn",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        Object({
                            "List": Object({
                                "items": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "english_ispell",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        Object({
                            "List": Object({
                                "items": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "english_stem",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                    ]),
                    "kind": String(
                        "ALTER_TSCONFIG_ADD_MAPPING",
                    ),
                    "tokentype": Array([
                        Object({
                            "String": Object({
                                "str": String(
                                    "asciiword",
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                115,
            ),
        },
    ],
)
