parser/src/snapshots/squawk_parser__parse__tests__alter_user_mapping_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterUserMappingStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "public",
                                            ),
                                        }),
                                    }),
                                    "defaction": String(
                                        "DEFELEM_SET",
                                    ),
                                    "defname": String(
                                        "password",
                                    ),
                                    "location": Number(
                                        51,
                                    ),
                                }),
                            }),
                        ]),
                        "servername": String(
                            "foo",
                        ),
                        "user": Object({
                            "location": Number(
                                23,
                            ),
                            "rolename": String(
                                "bob",
                            ),
                            "roletype": String(
                                "ROLESPEC_CSTRING",
                            ),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    69,
                ),
            },
        ),
    ],
)
